# carnival

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/scripts/: adjust_version.py
.github/workflows/: build.yml  lint.yml  test.yml
examples/: example.toml  test-env.toml
src/carnival/: __main__.py  async_utils.py  config.py  envsubst.py  manager.py  process.py
tests/: conftest.py  test_config.py  test_envsubst.py  test_manager.py  test_process.py
tests/__snapshots__/: test_config.ambr
