[project]
name = "vh-carnival"
authors = [
    { name = "Aarni Koskela", email = "akx@iki.fi" }
]
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[project.scripts]
carnival = "carnival.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/carnival/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/carnival"]

[tool.hatch.build.targets.sdist]
packages = ["src/carnival", "tests"]

[dependency-groups]
dev = [
    "ruff>=0.14.11",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "syrupy>=5.0.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "COM812", # trailing commas
    "I", # isort
    "PERF", # perflint
    "PIE", # flake8-pie
    "PT", # flake8-pytest-style
    "RUF", # ruff-specific rules
    "S", # flake8-bandit (security)
    "SIM", # flake8-simplify
    "T", # flake8-print
    "UP", # pyupgrade
]
ignore = [
    "SIM105", # contextlib.suppress – slower than try/except/pass
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # asserts are fine in tests
".github/scripts/**" = ["S607", "T201"]  # CI scripts can print and call git

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_level = "INFO"
